# field-iq-product

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  DEPLOY_2B_GUIDE.md  DEPLOY_2C_GUIDE.md  DEPLOY_2D_GUIDE.md  DEPLOY_2E_GUIDE.md  DEPLOY_GUIDE.md  FIELD_IQ_PRODUCT_SPEC.md  Field_IQ_Meta_Ray-Ban_Display_Feasibility.pptx  Field_IQ_Product_Spec.pptx  Field_IQ_Product_Spec_Bundle.docx  Field_IQ_Vision_to_Realization.pptx  META_SDK_LANDSCAPE.md  PHASE_0_CLAUDE_CODE_PROMPT.md  PHASE_1_LOTO_V1_CLAUDE_CODE_PROMPT.md  PHASE_2_PRECONTEXT_NOTES.md  README.md  ROADMAP.md  VISION_TO_REALIZATION_SPEC.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/scripts/: railway-verifier-reconcile.sh
.github/workflows/: railway-verifier-deploy.yml
apps/companion/: README.md  app.json  eas.json  metro.config.js  package.json  tsconfig.json
apps/companion/app/: _layout.tsx  index.tsx  login.tsx  pair.tsx  scan.tsx
apps/companion/ios/: MetaGlassesModule.m  MetaGlassesModule.swift
apps/companion/src/: fixtures.ts  styles.ts
apps/dashboard/: README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
apps/dashboard/src/: App.tsx  mockMode.ts  router.ts  styles.css  test-setup.ts
apps/glasses-webapp/: README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
docs/: FIELDIQ_2_MIXED_REALITY_SPEC.md  TED_OVERNIGHT_BRIEF.md  hardware-integration.md
scripts/: setup.ts
services/backend/: .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  railway.json  tsconfig.build.json  tsconfig.json
services/cert-generator/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
services/cert-generator/src/cert_generator/: __init__.py  builder.py  bus.py  config.py  db.py  logging_setup.py  qr.py  state.py  storage.py  worker.py
services/cert-generator/tests/: conftest.py  test_builder.py  test_bus.py  test_qr.py  test_state.py  test_storage.py  test_worker.py
services/reporter/: README.md  package.json  tsconfig.build.json  tsconfig.json
services/safety-monitor/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
services/safety-monitor/src/monitor/: __init__.py  bus.py  config.py  keyword.py  monitor.py  prompt.py  state.py  throttle.py  worker.py
services/safety-monitor/tests/: test_keyword.py  test_monitor.py  test_prompt.py  test_throttle.py
services/verifier/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
services/verifier/src/verifier/: __init__.py  config.py  events.py  persistence.py  prompts.py  result.py  verifier.py  worker.py
services/verifier/src/verifier/prompts/: system.txt
services/verifier/tests/: test_data_uri.py  test_live.py  test_prompts.py  test_verifier.py
tests/e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
tests/e2e/helpers/: api.ts  (+5 more)
(+157 files in other folders)
