[project]
name = "field-iq-cert-generator"
version = "0.1.0"
description = "EON Field IQ — Python certificate generator. Subscribes to session pub/sub and produces a one-page PDF completion certificate when a session ends with finalOutcome=pass."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "qrcode[pil]>=7.4.2",
    "redis>=5.2.0",
    "reportlab>=4.0.9",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pypdf>=4.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cert_generator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
