[project]
name = "field-iq-safety-monitor"
version = "0.1.0"
description = "EON Field IQ — Python safety monitor. Watches active sessions and publishes safety_alert events on Redis pub/sub when Claude (or a critical keyword) flags risk."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
