[project]
name = "field-iq-verifier"
version = "0.1.0"
description = "EON Field IQ — Python verification worker. Calls Claude Sonnet 4.6 to verify LOTO photos."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: tests that hit the real Anthropic API (skipped without ANTHROPIC_API_KEY)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
